[package]
name = "rust"
version = "0.1.0"
edition = "2021"
authors = ["Dave MacDonald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8.5", features = ["std_rng"] }
average = { version = "0.13.1", features = ["std"] }